--- a/notebooks/PTB_Example.ipynb
+++ b/notebooks/PTB_Example.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,13 +20,22 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 33.2M  100 33.2M    0     0   897k      0  0:00:37  0:00:37 --:--:-- 1119k0  0:00:43  0:00:04  0:00:39  776k00:05  0:00:42  809k\n"
+      "100 33.2M  100 33.2M    0     0   330k      0  0:01:43  0:01:43 --:--:--  157k318k  0:01:09  0:00:37  304k\n"
      ]
     }
    ],
    "source": [
     "!curl http://www.fit.vutbr.cz/~imikolov/rnnlm/simple-examples.tgz -o simple-examples.tgz\n",
     "!tar xf simple-examples.tgz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow_tutorials.rnn.ptb"
    ]
   },
   {
