broke out latex block for better rendering in gitlab

--- a/notebooks/01-KerasPoisonousMushrooms.ipynb
+++ b/notebooks/01-KerasPoisonousMushrooms.ipynb
@@ -370,8 +370,13 @@
     "\n",
     "A dense layer applies an activation function to the output of $W \\cdot x + b$.  If the densen layer only had three input and output, a diagram of the layer looks like sort of this.  \n",
     "\n",
-    "![Dense Layer](images/DenseLayer.png)\n",
-    "\n",
+    "![Dense Layer](images/DenseLayer.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Under the covers, keras represents layer's wieghts as a matrix.  The inputs, outputs, and biases are vectors...\n",
     "\n",
     "$$ \n",
@@ -401,9 +406,15 @@
     "b_3\n",
     "\\end{bmatrix}\n",
     "\\end{pmatrix}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "If this operation was decomposed futher, it would look like this...\n",
+    "\n",
     "$$ \n",
     "\\begin{bmatrix} \n",
     "y_1 \\\\\n",
@@ -416,18 +427,33 @@
     "relu(W_{2,1} x_1 + W_{2,2} x_2 +  W_{2,3} x_3 + b_2) \\\\\n",
     "relu(W_{3,1} x_1 + W_{3,2} x_2 +  W_{3,3} x_3 + b_3)\n",
     "\\end{bmatrix}\n",
-    "$$\n",
-    "\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Layer 2: Dropout\n",
     "\n",
-    "The dropout layer prevents overfitting by randomly dropping inputs to the next layer.\n",
-    "\n",
+    "The dropout layer prevents overfitting by randomly dropping inputs to the next layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Layer 3: Dense Layer\n",
     "\n",
     "This laye acts like the first one, except this layer applies a sigmod activation function.  The output is the probability a mushroom is poisonous.\n",
     "\n",
-    "$$y = sigmod(W \\cdot x + b)$$\n",
-    "\n",
+    "$$y = sigmod(W \\cdot x + b)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Putting It Together\n",
     "\n",
     "Fortunatly, we don't need to worry about wiegths and biases Keras.  We just define the layers in a sequence..."
