in the middle of revising yellowstone

--- a/notebooks/02-Yellowstone-visitors-part2.ipynb
+++ b/notebooks/02-Yellowstone-visitors-part2.ipynb
@@ -14,10 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -109,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -137,15 +135,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 23605  31992  17813  34095 108952 313924 493902 493915 262786  76542\n",
+      "  12698  22684  24757  36373  28112  32466 101988 325211 557810 523549\n",
+      " 229396  93240  25773  21594  24924  28590  19305  21342 158762 421817\n",
+      " 701758 651977 346906  91385  30202  24863  22523  32204  25325  28584\n",
+      " 148257 413052 688061 626834 281287  74181  16673  11916  18329  25647\n",
+      "  15671  17935 123437 396890 704745 604247 314919 103385  11955  10082\n",
+      "  18864  30067  11372  18303 127555 379837 667307 586631 287141  76118\n",
+      "   2273  16559  20919  30590   9611  21994 159597 401168 648994 572352\n",
+      " 261850  72944   6726  19414  24708  29684  20165  21681 147767 427968\n",
+      " 663205 614295 295089  94106   6414  18674  27238  32559  12310  31938\n",
+      " 185705 447465 685128 626537 361842 122637  19842  19993  25706  35936\n",
+      "  18470  22999 175285 442400 636295 440130 176833 170504  18510  19045\n",
+      "  24328  30768  22163  25292 216163 467193 696587 608248 403579 123454\n",
+      "   6791  19876  25884  33285  19372  29242 203712 526586 760520 674454\n",
+      " 414563 111145   8117  16692  28851  38050  19946  19875 188798 499107\n",
+      " 796656 721103 432948 144944   6261  23998  33552  40245  19615  51933\n",
+      " 257951 539959 799411 742879 462788 159842   8646  27584  38100  44049\n",
+      "  31768  24013 191222 525378 768164 714408 401124 125107  18899  29961\n",
+      "  40757  44946  27859  36280 233737 541704 831152 731012 414848 106646\n",
+      "   7953  29251  40868  48034  21157  26147 201797 550978 847003 773307\n",
+      " 468062 128483  11635   7814  32871  51692  27162  24321 187045 539368\n",
+      " 818964 753934 426806 118902  10473  20633  31155  42392  19324  21526\n",
+      " 191985 512895 774327 737973 403184 120266   9983  24503  33845  43032\n",
+      "  17894  29689 222385 549396 829683 764238 445741 150079   9106  25742\n",
+      "  34346  41120  23067  27128 203727 580624 832685 760062 445057 142049\n",
+      "  16230  25286  37301  47573  20404  27869 214814 553892 768040 634104\n",
+      " 353728 139784  13422  27302  44356  48980  18485  28341 229085 507737\n",
+      " 724735 613965 373583 121958  19585  27716  40465  52002  23305  15904\n",
+      " 228642 568144 794929 663266 413960 142702  11235  19123  36387  39494\n",
+      "  17718  28877 206245 580919 809689 698753 404498 175877   7967  12951\n",
+      "  22817  30030  20187  32434 216905 584925 732682 657869 406327 135605\n",
+      "  13939  14597  22297  29018  17324  26116 225811 560014 743165 647288\n",
+      " 393362 142912  11505  16839  23989  29011  18879  29381 230762 557213\n",
+      " 738807 635666 428369 146790  12382  19046  25476  30928  20225  27798\n",
+      " 264203 609606 822773 710781 463994 139789  15362  20408  26864  33557\n",
+      "  19147  24433 217938 593405 808110 731063 437552 145488  12671  16352\n",
+      "  24770  28355  17317  24831 261763 643844 900515 752983 489438 123867\n",
+      "   9397  18107  25595  29108  21028  32763 250445 694841 957785 854837\n",
+      " 550504 189072  16819  17388  24517  28174  18728  28147 207842 634316\n",
+      " 906935 805173 536349 175433  12198  16514  24766  27752  20248  29056\n",
+      " 268251 671825 888335 780286 527610 177069  14059  18472  24699  31053\n",
+      "  18613  24606 293250 624429 812212 725136 557925  47560  11169  17378\n",
+      "  26778  28233  18778  31356 310039 669642 858856 773357 571764 194804\n",
+      "  11537  18340  28091  34343  22989  46600 386064 780768 980702 854408\n",
+      " 680213 252013  11049  20470  30621  36327  22924  59253 444630 838316\n",
+      " 995917 841036 701754 242004  24710  19685]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -193,7 +254,7 @@
        "4  74857.0  204972"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +277,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -230,9 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -698,9 +757,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -783,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
