Updated the introduction

--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -69,7 +69,21 @@
    "source": [
     "## Yellowstone Visitors (LSTM)\n",
     "\n",
-    "[Yellowstone Vistiors Part 2](02-Yellowstone-visitors-part2.ipynb)"
+    "[Yellowstone Vistiors Part 2](02-Yellowstone-visitors-part2.ipynb)\n",
+    "\n",
+    "![Yellowstone National Park](images/640px-Beautiful_Meadow_in_Yellowstone_National_Park.jpeg)\n",
+    "\n",
+    "This tutorial attempts to predict Yellowstone visitors based on timeseries data.  We'll define a Long Short Term Memory network in Keras.\n",
+    "\n",
+    "This tutorial will:\n",
+    "\n",
+    "* Prepare Time Series Data for the LSTM network\n",
+    "    * Convert non-stationary to stationary data \n",
+    "    * Scale data\n",
+    "    * Create labels from time series data\n",
+    "* Define a stateful LSTM network\n",
+    "* Train the LSTM model \n",
+    "* Compare the LSTM predictions against monthly averages"
    ]
   },
   {
