--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
+    "  \n",
+    "![Keras Architecture](images/KerasDiagram.jpg)\n",
     "\n",
     "Keras is a deeplearning library that abstracts a tensor library like Theano or Tenorflow.  This tutorial leverages  Tensorflow as Keras' backend.  We'll run over the following examples..."
    ]
@@ -112,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
