LSTM Example Documentation Updates

--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "  \n",
-    "![Keras Architecture](images/KerasDiagram.jpg)\n",
     "\n",
-    "Keras is a deeplearning library that abstracts a tensor library like Theano or Tenorflow.  This tutorial leverages  Tensorflow as Keras' backend.  We'll run over the following examples..."
+    "Keras is a deeplearning library that abstracts a tensor library like Theano or Tenorflow.  This tutorial leverages  Tensorflow as Keras' backend.  We'll run over the following examples...\n",
+    "  \n",
+    "![Keras Architecture](images/KerasDiagram.jpg)"
    ]
   },
   {
