--- a/notebooks/02-Yellowstone-visitors-part1.ipynb
+++ b/notebooks/02-Yellowstone-visitors-part1.ipynb
@@ -17,9 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -71,9 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -100,11 +96,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Monthly Average Accuracy\n",
+    "\n",
+    "Before the next part models visits with a neural network, we'll measure the root mean squared error.  While the monthly averages aren't compeletly accurate, this method is very simple and explainable.    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -120,156 +123,6 @@
     "\n",
     "rmse = sqrt(mean_squared_error(act, pred))\n",
     "print('Test RMSE: %.3f' % rmse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0      8387\n",
-      "1    -14179\n",
-      "2     16282\n",
-      "3     74857\n",
-      "4    204972\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pandas import Series\n",
-    "\n",
-    "# create a differenced series\n",
-    "def difference(dataset, interval=1):\n",
-    "    diff = list()\n",
-    "    for i in range(interval, len(dataset)):\n",
-    "        value = dataset[i] - dataset[i - interval]\n",
-    "        diff.append(value)\n",
-    "    return Series(diff)\n",
-    " \n",
-    "# invert differenced value\n",
-    "def inverse_difference(history, yhat, interval=1):\n",
-    "    return yhat + history[-interval]\n",
-    "\n",
-    "# transform to be stationary\n",
-    "differenced = difference(series, 1)\n",
-    "print(differenced.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     31992\n",
-      "1     17813\n",
-      "2     34095\n",
-      "3    108952\n",
-      "4    313924\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# invert differenced value\n",
-    "def inverse_difference(history, yhat, interval=1):\n",
-    "    return yhat + history[-interval]\n",
-    "\n",
-    "# invert transform\n",
-    "inverted = list()\n",
-    "for i in range(len(differenced)):\n",
-    "    value = inverse_difference(series, differenced[i], len(series)-i)\n",
-    "    inverted.append(value)\n",
-    "inverted = Series(inverted)\n",
-    "print(inverted.head())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Scaled Dataset\n",
-    "\n",
-    "Scale the labels to fit between -1 and 1."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0   -0.957063\n",
-      "1   -0.940182\n",
-      "2   -0.968721\n",
-      "3   -0.935949\n",
-      "4   -0.785277\n",
-      "dtype: float64\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/johnhudzina/anaconda/envs/keras-tutorial/lib/python3.5/site-packages/sklearn/utils/validation.py:429: DataConversionWarning: Data with input dtype int64 was converted to float64 by MinMaxScaler.\n",
-      "  warnings.warn(msg, _DataConversionWarning)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "# transform scale\n",
-    "X = series.values\n",
-    "X = X.reshape(len(X), 1)\n",
-    "scaler = MinMaxScaler(feature_range=(-1, 1))\n",
-    "scaler = scaler.fit(X)\n",
-    "scaled_X = scaler.transform(X)\n",
-    "scaled_series = Series(scaled_X[:, 0])\n",
-    "print(scaled_series.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     23605.0\n",
-      "1     31992.0\n",
-      "2     17813.0\n",
-      "3     34095.0\n",
-      "4    108952.0\n",
-      "dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# invert transform\n",
-    "inverted_X = scaler.inverse_transform(scaled_X)\n",
-    "inverted_series = Series(inverted_X[:, 0])\n",
-    "print(inverted_series.head())"
    ]
   },
   {
@@ -298,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
