swapped out wildfire picture

--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "[Yellowstone Vistiors Part 1](02-Yellowstone-visitors-part1.ipynb)\n",
     "\n",
-    "![Yellowstone Fires](images/Yellowstone_fires_1988_bc.gif)\n",
+    "![Yellowstone Fires](images/640px-Wildfire_in_Yellowstone.jpg)\n",
     "\n",
     "Before we dive into Reccurent Nerual Networks, we'll look at a Yellowstone recreational visitor timeseries."
    ]
