Added tensorboard notebooks

--- a/notebooks/01-KerasPoisonousMushrooms.ipynb
+++ b/notebooks/01-KerasPoisonousMushrooms.ipynb
@@ -553,31 +553,31 @@
       "INFO:tensorflow:Summary name dense_2/kernel:0 is illegal; using dense_2/kernel_0 instead.\n",
       "INFO:tensorflow:Summary name dense_2/bias:0 is illegal; using dense_2/bias_0 instead.\n",
       "Epoch 1/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.5452 - acc: 0.7277     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.5059 - acc: 0.7777     \n",
       "Epoch 2/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.2352 - acc: 0.9460     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.2430 - acc: 0.9315     \n",
       "Epoch 3/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.1263 - acc: 0.9735     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.1257 - acc: 0.9648     \n",
       "Epoch 4/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0862 - acc: 0.9792     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0838 - acc: 0.9777     \n",
       "Epoch 5/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0653 - acc: 0.9837     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0587 - acc: 0.9857     \n",
       "Epoch 6/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0530 - acc: 0.9866     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0490 - acc: 0.9872     \n",
       "Epoch 7/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0482 - acc: 0.9866     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0418 - acc: 0.9898     \n",
       "Epoch 8/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0406 - acc: 0.9897     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0350 - acc: 0.9915     \n",
       "Epoch 9/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0365 - acc: 0.9923     - ETA: 0s - loss: 0.041\n",
+      "6499/6499 [==============================] - 0s - loss: 0.0302 - acc: 0.9917     \n",
       "Epoch 10/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0325 - acc: 0.9912     \n"
+      "6499/6499 [==============================] - 0s - loss: 0.0292 - acc: 0.9909     \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x11b32c978>"
+       "<keras.callbacks.History at 0x117a32eb8>"
       ]
      },
      "execution_count": 9,
@@ -606,7 +606,7 @@
      "output_type": "stream",
      "text": [
       "1625/1625 [==============================] - 0s\n",
-      "[0.01178448460996151, 0.99507689476013184]\n"
+      "[0.010274942964315414, 0.99507689476013184]\n"
      ]
     }
    ],
@@ -695,8 +695,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model.save_weights('/tmp/srmooms.hdf5')"
@@ -713,8 +715,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from keras.models import model_from_yaml\n",
@@ -731,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
