Edits + additional inmages

--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Keras is a deeplearning library that abstracts a tensor library like Theano or Tenorflow.  This tutorial leverages  Tensorflow as Keras' backend.  We'll run over the following examples...\n",
+    "Keras is a deeplearning library that encapslutes lower level tensor operations from Theano or Tensorflow.  To demonstrate Keras, we'll run over the following examples...\n",
     "  \n",
     "![Keras Architecture](images/KerasDiagram.jpg)"
    ]
@@ -25,11 +25,11 @@
     "\n",
     "Things we'll cover:\n",
     "\n",
-    "* Extract features for categorical data\n",
+    "* Extract features from categorical data\n",
     "* Define a simple neural network\n",
     "* Define Callbacks (Tensorflow logs)\n",
     "* Train the network \n",
-    "* Take a peak at the unlying network in Tensorboard\n",
+    "* Take a peak at the underlying network in Tensorboard\n",
     "* Evaluate the network against a test dataset"
    ]
   },
@@ -48,7 +48,7 @@
     "In this tutorial, we will cover:\n",
     "\n",
     "* Deep dive into the dense layers and the model definition\n",
-    "* Decompose the Keras' compile method to Tensorflow operations\n",
+    "* Decompose Keras' compile method to Tensorflow operations\n",
     "* Better understand Keras' fit method (with many lines of Tensorflow code)\n"
    ]
   },
