--- a/notebooks/01-KerasPoisonousMushrooms.ipynb
+++ b/notebooks/01-KerasPoisonousMushrooms.ipynb
@@ -233,9 +233,8 @@
    "source": [
     "## Feature extraction\n",
     "\n",
-    "If we wanted to use all the features in the training set then we would need to map each out.  The ```LabelEncoder``` converts T/F data to 1 and 0.  The ```LabelBinarizer``` converters categorical data to an **one hot encoding**. \n",
+    "If we wanted to use all the features in the training set then we would need to map each out.  The ```LabelEncoder``` converts T/F data to 1 and 0.  The ```LabelBinarizer``` converts categorical data to **one hot encoding**. \n",
     "\n",
-    "> Note: Bruises has missing data. \n",
     "\n",
     "If we wanted to use all the features in the training set then we would need to map each out:\n",
     "\n",
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -308,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -337,12 +336,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before we train the neural network, let split the data into training and test datasets."
+    "Before we train the neural network, let's split the data into training and test datasets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -371,11 +370,11 @@
    "source": [
     "# Model Definition\n",
     "\n",
-    "We will create a simple three layer neural network.  The network contains two dense layers and a dropout layer (avoids overfitting).  \n",
+    "We will create a simple three layer neural network.  The network contains two dense layers and a dropout layer (to avoid overfitting).  \n",
     "\n",
     "## Layer 1: Dense Layer\n",
     "\n",
-    "A dense layer applies an activation function to the output of $W \\cdot x + b$.  If the densen layer only had three input and output, a diagram of the layer looks like sort of this.  \n",
+    "A dense layer applies an activation function to the output of $W \\cdot x + b$.  If the dense layer only had three inputs and outputs, then the dense layer looks like this... \n",
     "\n",
     "![Dense Layer](images/DenseLayer.png)"
    ]
@@ -384,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Under the covers, keras represents layer's wieghts as a matrix.  The inputs, outputs, and biases are vectors...\n",
+    "Under the covers, keras represents the layer's weights as a matrix.  The inputs, outputs, and biases are vectors...\n",
     "\n",
     "$$ \n",
     "\\begin{bmatrix} \n",
@@ -441,9 +440,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The Rectified Linear Unit (RELU) function looks like this...\n",
+    "\n",
+    "![RELU](images/relu.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Layer 2: Dropout\n",
     "\n",
-    "The dropout layer prevents overfitting by randomly dropping inputs to the next layer."
+    "The dropout layer prevents overfitting by randomly dropping inputs to the next layer.\n",
+    "\n",
+    "![dropout layer](./images/dropout.png)"
    ]
   },
   {
@@ -452,7 +462,9 @@
    "source": [
     "## Layer 3: Dense Layer\n",
     "\n",
-    "This laye acts like the first one, except this layer applies a sigmod activation function.  The output is the probability a mushroom is poisonous.\n",
+    "This layer acts like the first one, except this layer applies a sigmod activation function.  The output is the probability a mushroom is poisonous.  If a sample represents a small probability of poisoning, we'll want to know!\n",
+    "\n",
+    "![sigmod](./images/sigmod.png)\n",
     "\n",
     "$$y = sigmod(W \\cdot x + b)$$"
    ]
@@ -463,19 +475,31 @@
    "source": [
     "## Putting It Together\n",
     "\n",
-    "Fortunatly, we don't need to worry about wiegths and biases Keras.  We just define the layers in a sequence..."
+    "Fortunately, we don't need to worry about defining the parameters (the weigths and biases) in Keras.  We just define the layers in a sequence..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using TensorFlow backend.\n"
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_3 (Dense)              (None, 20)                520       \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 20)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 1)                 21        \n",
+      "=================================================================\n",
+      "Total params: 541\n",
+      "Trainable params: 541\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
@@ -486,7 +510,9 @@
     "model = Sequential()\n",
     "model.add(Dense(20, activation='relu', input_dim=25))\n",
     "model.add(Dropout(0.5))\n",
-    "model.add(Dense(1, activation='sigmoid'))"
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "\n",
+    "model.summary()"
    ]
   },
   {
@@ -505,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -522,14 +548,14 @@
    "source": [
     "## Keras Callbacks\n",
     "\n",
-    "Keras provides callbacks as a means to instrument internal state.  In this example, we will write a tensorflow event log.  The event log enables a tensorboard visualization of the translated model.  The event log also captures key meterics during training. \n",
+    "Keras provides callbacks as a means to instrument internal state.  In this example, we will write a tensorflow event log.  The event log enables a tensorboard visualization of the translated model.  The event log also captures key metrics during training. \n",
     "\n",
     "> Note: This step is completely optional and depends on the backend engine.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -541,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -553,34 +579,34 @@
       "INFO:tensorflow:Summary name dense_2/kernel:0 is illegal; using dense_2/kernel_0 instead.\n",
       "INFO:tensorflow:Summary name dense_2/bias:0 is illegal; using dense_2/bias_0 instead.\n",
       "Epoch 1/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.5059 - acc: 0.7777     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.4649 - acc: 0.8297     \n",
       "Epoch 2/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.2430 - acc: 0.9315     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.1981 - acc: 0.9585     \n",
       "Epoch 3/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.1257 - acc: 0.9648     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.1163 - acc: 0.9725     \n",
       "Epoch 4/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0838 - acc: 0.9777     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0862 - acc: 0.9783     \n",
       "Epoch 5/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0587 - acc: 0.9857     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0680 - acc: 0.9818     \n",
       "Epoch 6/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0490 - acc: 0.9872     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0581 - acc: 0.9835     \n",
       "Epoch 7/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0418 - acc: 0.9898     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0460 - acc: 0.9874     \n",
       "Epoch 8/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0350 - acc: 0.9915     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0403 - acc: 0.9889     \n",
       "Epoch 9/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0302 - acc: 0.9917     \n",
+      "6499/6499 [==============================] - 0s - loss: 0.0377 - acc: 0.9897     \n",
       "Epoch 10/10\n",
-      "6499/6499 [==============================] - 0s - loss: 0.0292 - acc: 0.9909     \n"
+      "6499/6499 [==============================] - 0s - loss: 0.0342 - acc: 0.9905     \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x117a32eb8>"
+       "<keras.callbacks.History at 0x123a12c88>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +632,7 @@
      "output_type": "stream",
      "text": [
       "1625/1625 [==============================] - 0s\n",
-      "[0.010274942964315414, 0.99507689476013184]\n"
+      "[0.012097288854420185, 0.99507689476013184]\n"
      ]
     }
    ],
@@ -626,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -715,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -735,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +782,9 @@
     "predictions = new_model.predict(test_data[0:25]).round()\n",
     "for i in range(25):\n",
     "    if predictions[i]:\n",
-    "        print('Test sample {} is poisonous.'.format(i))"
+    "        print('Test sample {} is poisonous.'.format(i))\n",
+    "        \n",
+    "# Confusion Matrix"
    ]
   },
   {
