--- a/notebooks/01-KerasPoisonousTensorboard.ipynb
+++ b/notebooks/01-KerasPoisonousTensorboard.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -21,13 +21,16 @@
      "text": [
       "WARNING:tensorflow:Found more than one graph event per run, or there was a metagraph containing a graph_def, as well as one or more graph events.  Overwriting the graph with the newest event.\n",
       "WARNING:tensorflow:Found more than one metagraph event per run. Overwriting the metagraph with the newest event.\n",
+      "WARNING:tensorflow:Found more than one graph event per run, or there was a metagraph containing a graph_def, as well as one or more graph events.  Overwriting the graph with the newest event.\n",
+      "WARNING:tensorflow:Found more than one metagraph event per run. Overwriting the metagraph with the newest event.\n",
+      "WARNING:tensorflow:Found more than one graph event per run, or there was a metagraph containing a graph_def, as well as one or more graph events.  Overwriting the graph with the newest event.\n",
+      "WARNING:tensorflow:Found more than one metagraph event per run. Overwriting the metagraph with the newest event.\n",
       "Starting TensorBoard b'47' at http://0.0.0.0:6006\n",
       "(Press CTRL+C to quit)\n",
       "WARNING:tensorflow:path ../external/data/plugin/text/runs not found, sending 404\n",
       "WARNING:tensorflow:path ../external/data/plugin/text/runs not found, sending 404\n",
       "WARNING:tensorflow:path ../external/data/plugin/text/runs not found, sending 404\n",
-      "WARNING:tensorflow:path ../external/data/plugin/text/runs not found, sending 404\n",
-      "^C\n"
+      "WARNING:tensorflow:path ../external/data/plugin/text/runs not found, sending 404\n"
      ]
     }
    ],
